-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1112 2011-06-22 03:01:28 guru Exp $
-----------------------------------------------------------------------------------------

2011-06-21	jluis
	* gmtinstall.bat:	It now builds also the supplements and put all dlls 
				supplements inside the main gmt.dll.

2011-06-21	pwessel
	* pslegend_func.c:	Append +r[<radius>] to -F to get a rounded rectangular border.
				Also added +i[<gap>/]<pen> for an secondary (inner) frame,
				+p<pen> to specify the pen used for main frame, and +s to
				add a shifted background shaded rectangle.
	* grdhisteq_func.c:	Fixed porting bugs and added test script.

2011-06-21	remko
	* pslib.[ch]:		Added rounded rectangle symbol PSL_RNDRECT ('R').
	* PSL_prologue.ps:	---"---
	* psxy[z]_func.c:	---"---
	* explain_symbol.txt:	New shared file for psxy[z].txt.
	* gmt_init.c:		Redesign gmt_decode_tinfo in advance of allowing empties.
	* *.c:			Removed axis items GMT_INTV_UPPER and GMT_INTV_LOWER (interval
				annotation is determined by 'type' in GMT_PLOT_AXIS_ITEM struct).
	* gmt_map.c:		Added GMT_auto_frame_interval to determine annotation, tick and
				grid interval when left blank.
	* psscale_func.c:	---"---
	* explain_-B_full.txt:	Explain new use of -Bafg.

2011-06-20	remko
	* gmt_notunix.h:	Only define PATH_SEPARATOR (as char), not also PATH_DELIM.

2011-06-19	pwessel
	* *.c:			Eliminated DIR_DELIM since '/' works for all systems.
				Added WIN32 check to turn /x/dir into x:/dir paths
	* pslegend_func.c:	Enhanced -D to allow for clever offsets away from given origin.

2011-06-18	pwessel
	* grdpaste_func.c:	Fixed porting bugs, JL added test case that now works.

2011-06-16	pwessel
	* gmt_io.c:		Like for segment header, turn on -ho when a header is read.
	* sample1d_func.c:	The spatial resampling had a porting bug.
	* greenspline_func.c:	Fixed a few porting bugs, added several tests to suite.

2011-06-14	pwessel